; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/realtek/extr_r8169_main.c_rtl8168c_2_hw_phy_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/realtek/extr_r8169_main.c_rtl8168c_2_hw_phy_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.phy_reg = type { i32, i32 }
%struct.rtl8169_private = type { i32 }

@rtl8168c_2_hw_phy_config.phy_reg_init = internal constant [15 x %struct.phy_reg] [%struct.phy_reg { i32 31, i32 1 }, %struct.phy_reg { i32 18, i32 8960 }, %struct.phy_reg { i32 3, i32 32815 }, %struct.phy_reg { i32 2, i32 20226 }, %struct.phy_reg { i32 1, i32 1033 }, %struct.phy_reg { i32 0, i32 61593 }, %struct.phy_reg { i32 4, i32 38912 }, %struct.phy_reg { i32 4, i32 36864 }, %struct.phy_reg { i32 29, i32 15768 }, %struct.phy_reg { i32 31, i32 2 }, %struct.phy_reg { i32 12, i32 32440 }, %struct.phy_reg { i32 6, i32 1889 }, %struct.phy_reg { i32 31, i32 3 }, %struct.phy_reg { i32 22, i32 3850 }, %struct.phy_reg { i32 31, i32 0 }], align 16
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rtl8169_private*)* @rtl8168c_2_hw_phy_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rtl8168c_2_hw_phy_config(%struct.rtl8169_private* %0) #0 {
  %2 = alloca %struct.rtl8169_private*, align 8
  store %struct.rtl8169_private* %0, %struct.rtl8169_private** %2, align 8
  %3 = load %struct.rtl8169_private*, %struct.rtl8169_private** %2, align 8
  %4 = call i32 @rtl_writephy_batch(%struct.rtl8169_private* %3, %struct.phy_reg* getelementptr inbounds ([15 x %struct.phy_reg], [15 x %struct.phy_reg]* @rtl8168c_2_hw_phy_config.phy_reg_init, i64 0, i64 0))
  %5 = load %struct.rtl8169_private*, %struct.rtl8169_private** %2, align 8
  %6 = call i32 @rtl_patchphy(%struct.rtl8169_private* %5, i32 22, i32 1)
  %7 = load %struct.rtl8169_private*, %struct.rtl8169_private** %2, align 8
  %8 = call i32 @rtl_patchphy(%struct.rtl8169_private* %7, i32 20, i32 32)
  %9 = load %struct.rtl8169_private*, %struct.rtl8169_private** %2, align 8
  %10 = call i32 @rtl_patchphy(%struct.rtl8169_private* %9, i32 13, i32 32)
  %11 = load %struct.rtl8169_private*, %struct.rtl8169_private** %2, align 8
  %12 = call i32 @rtl_writephy(%struct.rtl8169_private* %11, i32 31, i32 0)
  ret void
}

declare dso_local i32 @rtl_writephy_batch(%struct.rtl8169_private*, %struct.phy_reg*) #1

declare dso_local i32 @rtl_patchphy(%struct.rtl8169_private*, i32, i32) #1

declare dso_local i32 @rtl_writephy(%struct.rtl8169_private*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
